--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.cov
 coverage/
+.aws-sam
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
