--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,23 +1,10 @@
-# More information about the configuration file can be found here:
-# https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-cli-config.html
 version = 0.1
-[default]
-[default.global.parameters]
-stack_name = "hackaton-serverless"
-[default.build.parameters]
-parallel = true
-[default.validate.parameters]
-lint = true
 [default.deploy.parameters]
-capabilities = "CAPABILITY_IAM"
+stack_name = "sam-hackaton-lambda-app"
+resolve_s3 = true
+s3_prefix = "sam-hackaton-lambda-app"
+region = "us-east-1"
 confirm_changeset = true
-resolve_s3 = true
-resolve_image_repos = true
-[default.package.parameters]
-resolve_s3 = true
-[default.sync.parameters]
-watch = true
-[default.local_start_api.parameters]
-warm_containers = "EAGER"
-[default.local_start_lambda.parameters]
-warm_containers = "EAGER"
+capabilities = "CAPABILITY_IAM"
+disable_rollback = true
+image_repositories = []
